examples/test/testpolicy13240.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13240
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key19: value31
      key15: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value37
          key5: value7
          key30: value39
      podSelector:
        matchLabels:
          key41: value38
          key7: value6
          key21: value40
